--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ blog/bin/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#maven commands
+
+mvnw
+mvnw.cmd
