--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://mysqlbankaccount.mysql.database.azure.com:3306/bankacount?serverTimezone=UTC
 spring.datasource.username=simo@mysqlbankaccount
-spring.datasource.password=pass123
+spring.datasource.password=Pass1234
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Specify the DBMS
